--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
  <head>
  <title>kong</title>
+ <link rel="stylesheet" href="style.css">
  </head>
  
  <body>
-  <div>sample</div>
+  <div class="text">sample</div>
   </body>
 </html>
