--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html>
  <head>
  <title>kong</title>
+ <meta charset="utf-8">
  <link rel="stylesheet" href="style.css">
  </head>
  
- <body>
-  <div class="text">sample</div>
-  </body>
+ <header>
+    <img id="logo" src="kong1.jpg" alt=친환경제품비교사이트 콩의 로고>
+    <nav>
+<ul>
+<li><a href="#one">만족도</a></li>
+<li><a href="#two">가격</a></li>
+<li><a href="#three">판매율</a></li>
+<li><a href="#four">환경성</a></li>
+</ul>
+</nav>
+  </header>
+<section>
+    <img id="bean" src="kong.jpg" alt="콩 홍보 일러스트">
+    <h1>친환경 제품 비교 사이트 '콩'에서
+    그래프로 한눈에 제품을 비교해주니까
+    편리한 쇼핑이 가능해집니다!
+    </h1>
+    <h2>친환경에 관한 소식들</h2>
+   <iframe width="360" height="200" src="https://www.youtube.com/embed/zdRRUK5j7A8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="360" height="200" src="https://www.youtube.com/embed/JHw8dFj5XgQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+    <footer>
+<p>copyright &copy; 2020 Web Design</p>
+</footer>
 </html>
